--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "lint": "eslint"
+    "lint": "eslint ./src"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -42,8 +42,7 @@
     "lint-staged": "^12.4.1",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5",
-    "vite": "^4.1.4",
-    "vitest": "^0.29.2"
+    "vite": "^4.1.4"
   },
   "license": "MIT"
 }
