--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "lint:css": "stylelint src",
+    "lint:css:fix": "npm run lint:css -- --fix"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -44,6 +46,11 @@
     "jsdom": "^21.1.0",
     "lint-staged": "^12.4.1",
     "prettier": "^2.8.4",
+    "stylelint": "^15.4.0",
+    "stylelint-config-clean-order": "^5.0.1",
+    "stylelint-config-recommended-scss": "^9.0.1",
+    "stylelint-config-standard": "^32.0.0",
+    "stylelint-config-standard-scss": "^7.0.1",
     "typescript": "^4.9.5",
     "vite": "^4.1.4",
     "vitest": "^0.29.3"
