--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "test": "vitest",
     "lint": "eslint ./src",
     "lint:css": "stylelint src",
-    "lint:css:fix": "npm run lint:css -- --fix"
+    "lint:css:fix": "npm run lint:css -- --fix",
+    "cy:open-e2e": "cypress open --e2e --browser chrome",
+    "cy:run-e2e": "cypress run --e2e",
+    "cy:server-e2e": "start-server-and-test dev http-get://localhost:5173 cy:open-e2e",
+    "cy:coverage-e2e": "start-server-and-test dev http-get://localhost:5173 cy:run-e2e  && npx nyc report --reporter=text-summary"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
@@ -25,9 +29,12 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.10.4",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/compose-function": "^0.0.30",
+    "@types/cypress__code-coverage": "^3.10.0",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.12",
     "@types/react": "^18.0.26",
@@ -39,6 +46,8 @@
     "@vitejs/plugin-react": "^3.0.1",
     "@vitest/coverage-c8": "^0.30.1",
     "cross-env": "^7.0.3",
+    "cypress": "^12.11.0",
+    "cypress-vite": "^1.4.0",
     "eslint": "^8.39.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -52,7 +61,9 @@
     "husky": "^8.0.3",
     "jsdom": "^21.1.1",
     "lint-staged": "^13.2.2",
+    "nyc": "^15.1.0",
     "prettier": "^2.8.8",
+    "start-server-and-test": "^2.0.0",
     "stylelint": "^15.6.0",
     "stylelint-config-clean-order": "^5.0.1",
     "stylelint-config-recommended-scss": "^11.0.0",
@@ -60,6 +71,7 @@
     "stylelint-config-standard-scss": "^9.0.0",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
+    "vite-plugin-istanbul": "^4.0.1",
     "vitest": "^0.30.1"
   }
 }
