--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,7 +7,5 @@
     "allowSyntheticDefaultImports": true,
     "jsx": "preserve"
   },
-  "include": ["server.ts"],
-
-  "exclude": ["vite.config.ts"]
+  "include": ["vite.config.ts", "src/vite-env.d.ts", "server.ts"]
 }
